# retro-tiled

./: CMakeLists.txt  README.md  vcpkg.json
.github/workflows/: ci.yml
include/retro/: tiled.h
include/retro/tiled/: config.h  export.h  file.h  tmx.h  tsx.h
include/retro/tiled/tsx/: structs.h
src/: CMakeLists.txt
src/tiled/: data.cpp  data.h  data_parser.cpp  data_parser.h  file.cpp  parser.h  parser.inl  pch.cpp  pch.h  tmx.inl  tsx.inl
tests/: CMakeLists.txt
tests/res/: alien.tiled-project  alien.tiled-session  room_01.tmx  tileset_01.tsx
tests/src/: tmx.test.cpp  tsx.test.cpp
